--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.16",
         "axios": "^1.6.1",
         "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.32",
+        "postcss-load-config": "^5.0.2",
         "tailwindcss": "^3.3.6",
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "flowbite": "^2.2.0"
+        "flowbite": "^2.2.1"
     }
 }
